[project]
name = "pythontest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.1.1",
    "plyer>=2.1.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
